--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
     <p id="puntaje"></p>
   </form>
   <!---- Script- ---->
-  <script src="Entregable2_Rohr.js"></script>
+  <script src="index.js"></script>
 </body>
 </html>
