--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <header>
     <h1>Trivia de Recetas</h1>
     <h5 style="margin-right: 10px;">A continuación se presentarán una serie de ingredientes y la bandera de un país.
-      Debés adivinar que plato es originario del país de la bandera y se realiza con los ingredientes indicados.
+      Tenés que adivinar el plato a partir de la bandera del país de origen y los ingredientes indicados. 
+        Una vez pongas todas las respuestas hace click en enviar
     </h5> 
   </header>
   <form id="formulario">
